[package]
name = "gitlab_note_mr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
config = "0.13.1"
log = "0.4.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
stderrlog = "0.5.4"
tokio = { version = "1", features = ["full"] }
